BE/error/src/main/java/com/example/demo/schedule/persistence/ScheduleType.java
package com.example.demo.schedule.persistence;

public enum ScheduleType {
    PUBLIC,
    PRIVATE
}
